# Matrix

./: .gitignore  CMakeLists.txt  README.md
include/matrix/: matrix.hpp
tests/: CMakeLists.txt
